# Sanity

./: .gitignore  Makefile  README.md  active_compact.cuh  active_region.cuh  aizawa.cuh  blackhole_v20.cu  blackhole_v20bloated.cu  cell_grid.cuh  cell_grid_kernels.cuh  cli_args.cuh  cuda_backend.cuh  cuda_lut.cuh  cuda_primitives.cuh  diagnostics.cuh  disk.cuh  forces.cuh  harmonic.cuh  hopfion.cuh  kuramoto.cuh  math_types.cuh  mip_tree.cuh  nullable.h  octree.cuh  octree_kernels.cuh  passive_advection.cuh  photon_accumulator.cuh  physics.cu  physics_constants.cuh  render_color.cuh  render_fill.cuh  sim_backend.h  sim_cleanup.cuh  sim_context.h  sim_dispatch.cuh  sim_globals.h  sim_init.cuh  siphon_pump.cuh  siphon_pump.h  spawn.cuh  (+7 more)
V21/: CMakeLists.txt  blackhole_v21.c  blackhole_v21_visual.cpp  vk_compute.cpp  vk_compute.h
V21/Bird/: blackhole_v21_visual.cpp  gather_measure.comp  project.comp  siphon.comp  vk_compute.cpp
V21/GridSample/: gather_measure.comp  project.comp  siphon.comp  vk_compute.cpp
V21/ModeBranch/: blackhole_v21.c  blackhole_v21_visual.cpp  project.comp  siphon.comp
V21/Navi/: blackhole_v21_visual.cpp  siphon.comp  vk_compute.cpp  vk_compute.h
V21/NoGather/: siphon.comp  vk_compute.cpp
V21/core/: v21_accumulate.h  v21_alloc_cpu.h  v21_alloc_gpu.h  v21_mem.h  v21_oracle.h  v21_types.h
V21/docs/: constraint_experiment.md  current_math.md  next_session_plan.md  phase22_handoff.md  phase3b_bandwidth_plan.md  viviani_sort_retrospective.md
V21/kernels/: accumulator.comp  accumulator.spv  collision_apply.comp  collision_resolve_graded.comp  collision_sync.comp  cyl_scatter.comp  gather.spv  gather_measure.comp  graded_to_cartesian.comp  graded_to_packed.comp  hopfion.comp  hopfion.spv  passive.comp  passive.spv  project.comp  region.spv  scatter.comp  scatter.spv  scatter_histogram.comp  siphon.comp  siphon.spv  siphon_graded.comp  spawn.comp  spawn.spv  stencil.comp
V21/tests/: test_cpu_alloc.c
V21/vendors/: nvidia_backend.cpp
V22/: CMakeLists.txt  SQUARAGON_INTEGRATION.md  blackhole_v22_visual.cpp  squaragon_v2.h  vk_compute.cpp  vk_compute.h
V22/core/: v21_alloc_cpu.h  v21_backend.h  v21_geometry.h  v21_oracle.h  v21_physics_diag.h  v21_spirv.h  v21_vertex_pack.h
V22/kernels/: cartesian_to_graded.comp  collision_apply_graded.comp  collision_resolve.comp  collision_snapshot.comp  constraint_solve.comp  constraint_solve_graded.comp  cyl_stencil.comp  fourier_normalize.comp  fourier_render.comp  fourier_sample.comp  fourier_scatter.comp  gather.comp  graded_project.comp  graded_to_packed.comp  mode_partition.comp  project.comp  region.comp  scatter.comp  scatter_build_index.comp  scatter_reduce.comp  scatter_reorder.comp  scatter_scan.comp  siphon.comp  siphon_forward.comp  siphon_graded.comp  siphon_packed.comp  spawn.comp  stencil.comp
V22/tests/: test_torus_vs_cartesian  test_torus_vs_cartesian.c
V22/vulkan/: vk_attractor.cpp  vk_buffer.cpp  vk_instance.cpp  vk_pipeline.cpp  vk_swapchain.cpp  vk_types.h
V22/vulkan/shaders/: tone_map.frag  tone_map.vert
docs/: active_flag_audit.md  gpu_noise_analyzer.html  hopfion_spec.docx  resonance_learnings.md  squaragon_learnings.md
docs/baselines/: README.md  qr_baseline.csv  qr_baseline_run2.csv  qr_step2_2d.csv
validator/: frame_export.cuh
vulkan/: vk_attractor.h  vk_bloom.h  vk_buffer.cpp  vk_cuda_interop.cpp  vk_cuda_interop.h  vk_device.cpp  vk_pipeline.cpp  vk_types.h
vulkan/shaders/: bloom_blur.frag  bloom_composite.frag  bloom_extract.frag  fullscreen.vert  harmonic_attractor.comp  harmonic_phase.comp  harmonic_sample.comp  particle.frag  particle.vert  tone_map.frag  volume.frag  volume.vert  volume_analytic.frag  volume_shells.frag
vulkan/shaders/compute/: scatter.comp  siphon.comp
